fixing alignment of sibling nav date

--- a/public/docs/css/style.css
+++ b/public/docs/css/style.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
-/* @override http://dev.caseyagollan.com/docs/css/style.css */
+/*! @override 
+	http://dev.caseyagollan.com:8888/docs/css/style.css
+*/
 /*! normalize.css 2011-11-04T15:38 UTC - http://github.com/necolas/normalize.css */
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section {
   display: block; }
@@ -831,6 +833,10 @@ body#single {
     color: #fff; }
   body#single nav.siblings a:nth-child(2) {
     text-align: right; }
+  body#single .date {
+    vertical-align: middle;
+    padding: 0;
+    margin: 0; }
 
 .isotope,
 .isotope .isotope-item {
